Fri Jan 26 22:36:21 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSBrowser.m (NSBR_VOFFSET): Changed from 3 to 2.
	([-titleHeight]): Return 21.
	* Source/NSFontPanel.m (_setFloatValue): New function to avoid
	displaying .00000 for floats.  ([-browser:selectRow:inColumn:]),
	([-setPanelFont:isMultiple:]): Use it.  ([-_initWithoutGModel]):
	Completely rewritten sizes; fixed autoresizing masks; use a
	GSBrowserTitleCell to draw the size column title; added trick to
	make splitview sizes right; set min size.
	([-browser:titleOfColumn:]), ([-browser:numberOfRowsInColumn:]),
	([-browser:selectRow:inColumn:]): Tiny speed up.
	([splitView:constrainMinCoordinate:maxCoordinate:ofSubviewAt:]):
	New method.
	* Source/NSSplitView.m ([-initWithFrame:]): Set
	_autoresizes_subviews to NO.  ([-isFlipped]): Return YES as per
	spec.  ([-adjustSubviews]), ([-drawRect:]), ([-mouseDown:]):
	Updated for flipped coordinates.  ([-drawDividerInRect:]): Fixed
	bug in drawing dimple with flipped coordinates.
	
2001-01-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSLayoutManager.m: when doing conversions between glyph
	and character indices, support the index immediately beyond the
	end of the glyphs/characters without raising an exception.

2001-01-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSLayoutManager.m: loads of glyph changes - added some
	implementation notes.  Implemented gaps in the glyphs stream.
	I think all glyph methods are implemented now (probably). 
	Really needs someone elses eye casting over it, to try to
	catch any obvious bugs.

2001-01-20  Fred Kiefer  <FredKiefer@gmx.de>

	* Source/NSBezierPath.m 
	Corrected some bugs. Opimized the concret subclass to use a
	GSIArray.
	
Sun Jan 21 14:10:52 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSClipView.m ([-setBoundsOrigin:]): Rewritten/fixed
	scrolling so that it only copies from visible bits.

Sat Jan 20 23:38:03 2001  Nicola Pero  <n.pero@mi.flashnet.it>
