@@ -1,3 +1,7 @@
+2001-01-27  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Tools/gpbs.m: Cope better with nil pasteboard owners.
+
 Fri Jan 26 22:36:21 2001  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* Source/NSBrowser.m (NSBR_VOFFSET): Changed from 3 to 2.
